drop ide api deps